[package]
name = "confluence"
version = "0.3.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
description = "Access and modify Atlassian Confluence pages from Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Nercury/confluence-rs"
documentation = "http://nercury.github.io/confluence-rs/confluence/index.html"
keywords = ["confluence", "atlassian", "api", "soap", "wiki"]
categories = ["api-bindings"]

[dependencies]
xml-rs = "^0.8.0"
log = "^0.4.3"
hyper = "^0.11"
xmltree = "^0.8.0"
chrono = "^0.4"
mime = "*"